<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TinyCircuits BLE Conduit</string>
    <string name="controlActivity">Device Control</string>
    <string name="ble_service">TinyCircuits BLE Service</string>
    <string name="notify_service">TinyCircuits Notification Listener</string>

    <string name="bt_not_supported">Bluetooth LE is not supported on your device.</string>
    <string name="bt_enabled">Bluetooth must be enabled to use this app.</string>
    <string name="device_default">Unknown</string>

    <string name="unknown_name">Unknown Name</string>
    <string name="unknown_address">Unknown Address</string>

    <string name="action_settings">Settings</string>

    <string name="no_data">No Data</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>

    <!-- menu items -->
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="waiting">&#8230;</string>

    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <string name="notif_settings">Notification Settings</string>

    <string name="device_control">Device Control</string>

    <string name="deviceName">Device Name</string>
    <string name="macAddress">Device Mac Address</string>
    <string name="status">Status</string>

    <!-- alert dialog -->
    <string name="alert_title">Action Required</string>
    <string name="alert_message">This application requires you to enable a Notification Listener.</string>
    <string name="alert_neg">I don\'t want to</string>
    <string name="Set_Time">Set Time</string>
    <string name="appAlerts">Supported Apps:</string>
    <string name="syncTime">Sync Time</string>
    <string name="enabledAppLabel">Enabled Apps</string>
    <!-- positive alert btn is with @android: string/ok -->

    <string name="appString">Phone Messaging Message</string>

</resources>
