<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ControlActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:background="@color/tcorange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_gravity="center"
            android:text="@string/deviceName"
            android:padding="8dp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:layout_margin="5dp"
            android:background="@color/tcblue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:padding="10dp"
                android:textSize="32sp"
                android:id="@+id/control_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            </FrameLayout>
    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:background="@color/tcorange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_gravity="center"
            android:text="@string/status"
            android:padding="8dp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:layout_margin="5dp"
            android:background="@color/tcblue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:padding="10dp"
                android:textSize="32sp"
                android:id="@+id/connection_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:background="@color/tcorange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_gravity="center"
            android:text="@string/enabledAppLabel"
            android:padding="8dp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <FrameLayout
            android:layout_margin="5dp"
            android:background="@color/tcblue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText"
                android:padding="10dp"
                android:background="@color/tcblue"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:text="@string/appString"
                android:textColor="#ffffff"
                android:textSize="22dp"
                android:textIsSelectable="false" />
        </FrameLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/syncTime"
        android:onClick="doSubmit"
        android:id="@+id/button"
        android:enabled="true" />

    <ImageView
        android:src="@drawable/tiny_circuits_long_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
